<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">Über…</string>
    <string name="accept">Erlauben</string>
    <string name="accept_2">Einwilligen</string>
    <string name="action_exit">Verlassen</string>
    <string name="action_set_bookmark">Setzen</string>
    <string name="after_kneading_warning_text">Bitte beachte, dass der Teigmodus nicht länger als 2 Minuten am Stück verwendet werden sollte.\nFür die erneute Verwendung des Programms warte bitte einige Minuten, um den Motor abkühlen zu lassen.\nAndere Funktionen kannst du direkt nach dem Kneten verwenden.</string>
    <string name="all">Alles</string>
    <string name="android_securitypatchlevel">SPL: %1$s</string>
    <string name="android_version">Android Version: %1$s</string>
    <string name="app_name">MC2</string>
    <string name="app_version">App Version: %1$s</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure">Bist du sicher?</string>
    <string name="auto">Auto</string>
    <string name="back">Zurück</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cancel">Abbrechen</string>
    <string name="carbohydrate">Kohlenhydrate</string>
    <string name="change">ÄNDERN</string>
    <string name="change_language">Hier klicken um die Sprache zu ändern</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="checking_connection">Wird geprüft…</string>
    <string name="choose_network">Ein Netzwerk auswählen…</string>
    <string name="choose_network_click">Hier klicken um ein Netzwerk auszuwählen</string>
    <string name="close">Schliessen</string>
    <string name="colon">:</string>
    <string name="conditions_of_use">Datenschutzerklärung</string>
    <string name="connect">VERBINDEN</string>
    <string name="connected">Verbunden</string>
    <string name="connected_to_server">Verbindungsstatus zum Server: %1$s</string>
    <string name="connecting">Verbinden</string>
    <string name="consent_settings_header">Einwilligungen</string>
    <string name="continue_cooking">Fortsetzen</string>
    <string name="continue_guided_cooking">Weiter</string>
    <string name="cooking">Kochen</string>
    <string name="data_privacy">Datenschutz</string>
    <string name="data_privacy_accept">Durch das Verbinden stimmst du unserer Datenschutzerklärung zu</string>
    <string name="data_privacy_acknowledge_header">Datenschutz ist uns wichtig! Bitte nimm unsere Datenschutzerklärung zur Kenntnis.</string>
    <string name="data_privacy_acknowledge_header_new_version">Wichtiger Hinweis: Wir haben unsere Datenschutzhinweise geändert. Bitte nimm unsere aktuellen Datenschutzhinweise zur Kenntnis.</string>
    <string name="data_privacy_acknowledged">Zur Kenntnis genommen</string>
    <string name="data_privacy_policy">Datenschutzerklärung</string>
    <string name="decline">Ablehnen</string>
    <string name="default_error">error</string>
    <string name="default_set_value">default</string>
    <string name="default_time_value">00</string>
    <string name="delete_configuration">Einstellung vergessen</string>
    <string name="dialog_cooking_already">Es ist bereits ein Kochvorgang\naktiv und du versuchst, einen weiteren\nzu starten.\nWas wünschst du?</string>
    <string name="dialog_cooking_default_stop">Du befindest dich\nim voreingestellten Kochmodus mit\n bereits getätigten Einstellungen.\nWas wünschst du?</string>
    <string name="dialog_cooking_stop">Möchtest du den aktiven Vorgang wirklich abbrechen und zu einem anderen Menü wechseln?</string>
    <string name="dialog_downloadInstallUpdate">Herunterladen &amp; installieren</string>
    <string name="dialog_error_okay">Ok</string>
    <string name="dialog_error_title_default">Ein Fehler ist aufgetreten.</string>
    <string name="dialog_error_title_internal">Interner Fehler, bitte aus/einschalten.</string>
    <string name="dialog_error_title_max_runtime_exceeded">Maximale Zeitlimitierung für diese Funktion wurde überschritten. Starte den Vorgang erneut, wenn gewünscht.</string>
    <string name="dialog_error_title_motor">Motor überhitzt, bitte abkühlen lassen.</string>
    <string name="dialog_error_title_motor_overheat">Motor überlastet, bitte Maschine ausschalten und abkühlen lassen.</string>
    <string name="dialog_error_title_no_bowl">Kein Topf eingesetzt.</string>
    <string name="dialog_error_title_no_water">Topf ist überhitzt, bitte Flüssigkeit nachfüllen.</string>
    <string name="dialog_error_title_overvoltage">Zu hohe Netzspannung, Stecker ziehen.</string>
    <string name="do_not_ask_again">Nicht mehr fragen</string>
    <string name="factory_reset_short">Werkseinstellungen</string>
    <string name="factory_reset_small">Zurücksetzen</string>
    <string name="factory_reset_text">Willst du die Maschine auf Werkseinstellungen zurücksetzen? Alle Daten werden gelöscht\nund das Gerät neu gestartet!</string>
    <string name="firstlaunch_privacy_body">Hier kannst du die Datenschutzerklärung einsehen. Wir benötigen deine Zustimmung, um das WLAN einzurichten und mit deinem Mitgliedskonto zu verknüpfen. Im Anschluss erhältst du Zugriff auf kostenlose Updates und viele weitere Rezepte.</string>
    <string name="firstlaunch_privacy_checkbox_text">&lt;a href=POPUP&gt;Datenschutzerklärung&lt;/a&gt; zustimmen</string>
    <string name="firstlaunch_privacy_title">Datenschutz ist uns wichtig!</string>
    <string name="firstlaunch_welcome_body">Richte hier direkt dein WLAN und Mitgliedskonto ein, damit du Software Updates und die neuesten Rezepte empfangen kannst.</string>
    <string name="firstlaunch_welcome_title">Herzlichen Glückwunsch zu deiner neuen Küchenmaschine, der Monsieur Cuisine connect!</string>
    <string name="later">Später</string>
    <string name="leave">Beenden</string>
    <string name="new_recipes_message">Die neuen Rezepte findest du&lt;br&gt;in der Kategorie Neu.&lt;br&gt;Diese erkennst du auch an der&lt;br&gt;eingeknickten Ecke.</string>
    <string name="new_recipes_title">Du hast neue Rezepte erhalten!</string>
    <string name="next">Weiter</string>
    <string name="no">Nein</string>
    <string name="no_subscribe">Nicht anmelden</string>
    <string name="ok">Ok</string>
    <string name="question_hoyer_transfer">&lt;p&gt;&lt;strong&gt;Ihre Einwilligung&lt;/strong&gt;&lt;/p&gt;&lt;p&gt;Wir, die Lidl Stiftung &amp;amp; Co. KG (&amp;bdquo;Lidl&amp;ldquo;), m&amp;ouml;chten unser Sortiment weiter verbessern und unsere Angebote auf die Bed&amp;uuml;rfnisse unserer Kunden besser anpassen. Aus diesem Grund bitten wir Sie um Ihre Einwilligung in die Analyse der Nutzung Ihres Monsieur Cuisine connect (&amp;bdquo;MCC&amp;ldquo;). Sofern Sie uns Ihre Einwilligung erteilen, erfolgt die Auswertung Ihrer Daten ausschlie&amp;szlig;lich in anonymisierter Form. Damit k&amp;ouml;nnen wir auch anderen Kunden bestimmte Angebote und Produkte empfehlen.&lt;/p&gt;&lt;p&gt;Sie k&amp;ouml;nnen unter &amp;bdquo;Einstellungen&amp;ldquo; Ihre Einwilligung jederzeit freiwillig widerrufen.&lt;/p&gt;&lt;p&gt;Weitere Informationen zu unserer Verarbeitung Ihrer personenbezogenen Daten, insbesondere zum Umfang der Analyse Ihrer Nutzung Ihres MCC, erhalten Sie in unseren &lt;a href=POPUP&gt;Datenschutzhinweisen&lt;/a&gt;.&lt;/p&gt;</string>
    <string name="question_mc_newsletter_subscription">&lt;b&gt;Anmeldung zum Monsieur Cuisine-Newsletter. Der kostenlose Newsletter rund um den MCC. Verpassen Sie keine Tipps, wertvolle Informationen und neue Rezepte&lt;/b&gt;&lt;br&gt; Ja, ich möchte den Monsieur-Cuisine Newsletter der HOYER Handel GmbH per E-Mail erhalten und über aktuelle Informationen, Berichte, Angebote sowie Sonderaktionen in Bezug auf den MCC und andere Monsieur-Cuisine-Produkte informiert werden. Der Newletterversand erfolgt entsprechend unserer &lt;a href=POPUP&gt;Datenschutzerklärung&lt;/a&gt;.&lt;br&gt; Diese Einwilligung(en) kann ich durch Klicken auf den in jeder Werbemail bereitgestellten Abmelde-Link oder innerhalt der MC-App und auf der MC-Webseite unter „Mein Profil“, sowie auf dem MCC durch Ändern der Einstellungen unter „Einstellungen“ jederzeit widerrufen.</string>
    <string name="recipe_bookmark_question_dialog">Du bist im Rezept %1$s\nbei Schritt %2$d.\nWillst du ein Lesezeichen setzen oder das Rezept verlassen?</string>
    <string name="show_labels">Beschriftung</string>
    <string name="show_labels_text">Icon-Beschriftung anzeigen</string>
    <string name="skip">Überspringen</string>
    <string name="speed_warning_text">Warnung: Hohe Drehzahl bei heißem Topfinhalt ist gefährlich, wenn der Deckel nach dem Stoppen sofort geöffnet wird. Öffne den Deckel erst wenn der Topfinhalt sich nicht mehr bewegt!</string>
    <string name="start">Start</string>
    <string name="subscribe">Anmelden</string>
    <string name="usage_data">Betriebsdaten</string>
    <string name="user_scale_calibration">Waagenkalibrierung</string>
    <string name="user_scale_calibration_step_0">Hier kannst du die Waage kalibrieren.&lt;br&gt;&lt;br&gt;Stelle den leeren Topf in das Gerät&lt;br&gt;und drücke auf Start.</string>
    <string name="user_scale_calibration_step_1">Leeren Topf erkennen.</string>
    <string name="user_scale_calibration_step_2">Lege ein Gewicht von genau&lt;br&gt;&lt;b&gt;1kg&lt;/b&gt;&lt;br&gt;in den Topf.</string>
    <string name="user_scale_calibration_step_3">Lege ein Gewicht von genau&lt;br&gt;&lt;b&gt;3kg&lt;/b&gt;&lt;br&gt;in den Topf.</string>
    <string name="user_scale_calibration_step_4">Die Kalibrierung ist nun durchgeführt.</string>
    <string name="view_recipes">Jetzt ansehen</string>
    <string name="wi_fi">WLAN</string>
    <string name="wlan_wrong_password">Fehlerhaftes Passwort eingegeben</string>
    <string name="yes">Ja</string>
</resources>