<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/info_bg"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <view.QuestionDialogView
        android:id="@+id/scale_calib_step_0"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:bodyText="@string/user_scale_calibration_step_0"
        app:buttonOneImage="@drawable/dialog_decline"
        app:buttonOneText="@string/cancel"
        app:buttonTwoImage="@drawable/dialog_next"
        app:buttonTwoText="@string/start"
        app:titleText="@string/user_scale_calibration"/>
    <view.QuestionDialogView
        android:id="@+id/scale_calib_step_1"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:bodyText="@string/user_scale_calibration_step_1"
        app:buttonOneImage="@drawable/dialog_decline"
        app:buttonOneText="@string/cancel"
        app:titleText="@string/user_scale_calibration"/>
    <view.QuestionDialogView
        android:id="@+id/scale_calib_step_2"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:bodyText="@string/user_scale_calibration_step_2"
        app:buttonOneImage="@drawable/dialog_decline"
        app:buttonOneText="@string/back"
        app:titleText="@string/user_scale_calibration"/>
    <view.QuestionDialogView
        android:id="@+id/scale_calib_step_3"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:bodyText="@string/user_scale_calibration_step_3"
        app:buttonOneImage="@drawable/dialog_decline"
        app:buttonOneText="@string/back"
        app:titleText="@string/user_scale_calibration"/>
    <view.QuestionDialogView
        android:id="@+id/scale_calib_step_4"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:bodyText="@string/user_scale_calibration_step_4"
        app:buttonOneImage="@drawable/dialog_accept"
        app:buttonOneText="@string/leave"
        app:titleText="@string/user_scale_calibration"/>
</RelativeLayout>
