<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/info_bg"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <view.LanguageSelectLayout
        android:id="@+id/firstlaunch_language_select"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <view.DataPrivacyAcknowledgeLayout
        android:id="@+id/firstlaunch_acknowledge_data_privacy"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <view.QuestionDialogView
        android:id="@+id/firstlaunch_wifi_setup_question"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:bodyText="@string/firstlaunch_welcome_body"
        app:buttonOneImage="@drawable/dialog_decline"
        app:buttonOneText="@string/skip"
        app:buttonTwoImage="@drawable/dialog_next"
        app:buttonTwoText="@string/next"
        app:titleText="@string/firstlaunch_welcome_title"/>
    <view.WifiSetupLayout
        android:id="@+id/firstlaunch_wifi_setup"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"/>
    <view.QuestionDialogView
        android:id="@+id/firstlaunch_transfer_hoyer_question"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:bodyText="@string/question_hoyer_transfer"
        app:buttonOneImage="@drawable/dialog_decline"
        app:buttonOneText="@string/decline"
        app:buttonTwoImage="@drawable/dialog_accept"
        app:buttonTwoText="@string/accept"
        app:buttonTwoVisible="true"
        app:checkboxChecked="false"
        app:checkboxText="Datenübertragung auf Server erlauben"
        app:checkboxVisible="false"/>
    <view.ProfileLayout
        android:id="@+id/firstlaunch_profile"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"/>
    <view.QuestionDialogView
        android:id="@+id/firstlaunch_newsletter_hoyer_question"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:bodyText="@string/question_mc_newsletter_subscription"
        app:buttonOneImage="@drawable/dialog_decline"
        app:buttonOneText="@string/decline"
        app:buttonTwoImage="@drawable/dialog_accept"
        app:buttonTwoText="@string/accept_2"
        app:buttonTwoVisible="true"
        app:checkboxChecked="false"
        app:checkboxText="MCc Newsletter abonnieren"
        app:checkboxVisible="false"/>
</RelativeLayout>
