<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_activity_root"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/main_activity_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/container_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <FrameLayout
            android:id="@+id/container_recipes"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <FrameLayout
            android:id="@+id/container_firstlaunch"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <FrameLayout
            android:id="@+id/container_scale_calibration"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <FrameLayout
            android:id="@+id/container_guided_cooking"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <include
            android:id="@+id/preset_layout"
            android:visibility="gone"
            layout="@layout/preset_layout"/>
        <FrameLayout
            android:id="@+id/container_settings"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <FrameLayout
            android:id="@+id/container_videoplayer"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <include
            android:id="@+id/top_bar_layout"
            layout="@layout/top_bar"/>
        <FrameLayout
            android:id="@+id/container_tutorial"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <include
            android:id="@+id/dialog_stop"
            android:visibility="gone"
            layout="@layout/dialog_stop"/>
        <include
            android:id="@+id/dialog_turbo_disabled"
            android:visibility="gone"
            layout="@layout/dialog_turbo_disabled"/>
        <include
            android:id="@+id/dialog_warning"
            android:visibility="gone"
            layout="@layout/dialog_warning"/>
        <include
            android:id="@+id/dialog_save_bookmark"
            android:visibility="gone"
            layout="@layout/dialog_save_bookmark_layout"/>
        <view.QuestionDialogView
            android:id="@+id/dialog_recipes_received"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:bodyText="@string/new_recipes_message"
            app:buttonOneImage="@drawable/dialog_decline"
            app:buttonOneText="@string/ok"
            app:buttonTwoImage="@drawable/dialog_next"
            app:buttonTwoText="@string/view_recipes"
            app:titleText="@string/new_recipes_title"/>
        <view.QuestionDialogView
            android:id="@+id/bookmark_question_dialog"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:bodyText="@string/recipe_bookmark_question_dialog"
            app:buttonOneImage="@drawable/dialog_decline"
            app:buttonOneText="@string/cancel"
            app:buttonThreeImage="@drawable/dialog_next"
            app:buttonThreeText="@string/action_exit"
            app:buttonThreeVisible="true"
            app:buttonTwoImage="@drawable/dialog_bookmark"
            app:buttonTwoText="@string/action_set_bookmark"
            app:checkboxVisible="false"
            app:titleText=""/>
        <view.QuestionDialogView
            android:id="@+id/speed_warning_question"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:bodyText="@string/speed_warning_text"
            app:buttonOneImage="@drawable/dialog_decline"
            app:buttonOneText="@string/leave"
            app:buttonTwoImage="@drawable/dialog_accept"
            app:buttonTwoText="@string/continue_cooking"
            app:checkboxVisible="false"
            app:titleText=""/>
        <view.QuestionDialogView
            android:id="@+id/popup_acknowledge_terms_of_use"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:bodyText=""
            app:buttonOneImage="@drawable/dialog_decline"
            app:buttonOneText="@string/skip"
            app:buttonTwoImage="@drawable/dialog_accept"
            app:buttonTwoText="@string/accept_2"
            app:checkboxVisible="false"
            app:titleText=""/>
        <view.SurveyDialogView
            android:id="@+id/popup_survey"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:buttonOneImage="@drawable/dialog_decline"
            app:buttonOneText="@string/do_not_ask_again"
            app:buttonTwoImage="@drawable/dialog_next"
            app:buttonTwoText="@string/later"/>
        <view.DataPrivacyAcknowledgeLayout
            android:id="@+id/popup_acknowledge_data_privacy"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <include
            android:id="@+id/dialog_user_timeout"
            android:visibility="gone"
            layout="@layout/dialog_user_timeout"/>
        <include
            android:id="@+id/dialog_general"
            android:visibility="gone"
            layout="@layout/dialog_user_timeout"/>
    </RelativeLayout>
</FrameLayout>
