<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/show_labels_root_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">
    <RelativeLayout
        android:id="@+id/left_row"
        style="@style/settings_left_row">
        <ImageView
            android:src="@drawable/asset_label_icons"
            style="@style/settings_left_icon"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/middle_row"
        style="@style/settings_middle_row">
        <view.QuicksandTextView
            android:id="@+id/show_labels_label"
            android:text="@string/show_labels"
            style="@style/settings_middle_row_tv"/>
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/right_row"
        android:layout_height="50dp"
        android:weightSum="7"
        style="@style/settings_right_row">
        <view.QuicksandTextView
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:id="@+id/show_labels_what_tv"
            android:background="@drawable/shape_settings_rectangle_rounded_left"
            android:clickable="true"
            android:layout_width="0dp"
            android:text="@string/show_labels_text"
            android:minEms="18"
            android:layout_weight="5"
            style="@style/settings_right_row_tv"/>
        <view.QuicksandToggleButton
            android:textSize="@dimen/text_small_middle"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:id="@+id/show_labels_toggle"
            android:background="@drawable/shape_settings_rectangle_rounded_right"
            android:visibility="visible"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:checked="true"
            android:textOn="@string/yes"
            android:textOff="@string/no"
            android:layout_weight="2"
            android:textAllCaps="true"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            style="@style/settings_right_row_tv"/>
    </LinearLayout>
</RelativeLayout>
