<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wifi_root_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">
    <RelativeLayout
        android:id="@+id/left_row"
        style="@style/settings_left_row">
        <ImageView
            android:src="@drawable/asset_001_wifi"
            style="@style/settings_left_icon"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/middle_row"
        style="@style/settings_middle_row">
        <view.QuicksandTextView
            android:id="@+id/what_tv"
            android:text="@string/wi_fi"
            style="@style/settings_middle_row_tv"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/right_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/settings_right_row">
        <view.QuicksandTextView
            android:textColor="@color/accent"
            android:id="@+id/wifi_wrong_password_error"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wlan_wrong_password"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="692dp"
            android:layout_height="60dp"
            android:weightSum="7"
            android:layout_below="@+id/wifi_wrong_password_error">
            <view.QuicksandTextView
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:id="@+id/wifi_row_what_tv"
                android:background="@drawable/selector_wifi_select"
                android:clickable="true"
                android:layout_width="0dp"
                android:text="@string/choose_network_click"
                android:lines="1"
                android:minEms="18"
                android:scrollHorizontally="true"
                android:layout_weight="5"
                style="@style/settings_right_row_tv"/>
            <view.QuicksandTextView
                android:textSize="@dimen/text_small_middle"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:id="@+id/wifi_row_back"
                android:background="@drawable/shape_settings_rectangle_rounded_right_top"
                android:clickable="true"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/change"
                android:layout_weight="2"
                android:textAllCaps="true"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                style="@style/settings_right_row_tv"/>
        </LinearLayout>
    </RelativeLayout>
    <ProgressBar
        android:id="@+id/wifi_scanning_progress"
        android:drawingCacheQuality="high"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginTop="14dp"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_animation"
        android:indeterminateDuration="1500"
        android:layout_marginEnd="24dp"
        android:layout_toStartOf="@+id/right_row"/>
    <ListView
        android:id="@+id/wifi_scan_results"
        android:visibility="gone"
        android:layout_width="692dp"
        android:layout_height="325dp"
        android:layout_marginBottom="16dp"
        android:divider="@null"
        android:layout_below="@+id/right_row"
        android:layout_toEndOf="@+id/middle_row"
        android:nestedScrollingEnabled="true"
        style="@style/settings_right_row"/>
    <Switch
        android:textSize="16sp"
        android:id="@+id/wifi_on_sw"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:checked="true"
        android:layout_below="@+id/left_row"
        android:layout_marginStart="67dp"
        style="@style/mcSwitchStyle"/>
</RelativeLayout>
